# vision

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  build.py  environment.yaml  environment.yml  pyproject.toml  requirements.txt  setup.cfg
biocell/: README.md  build.py  setup.cfg
biocell/src/bsmu/biocell/app/: __init__.py  __main__.py  main.py  mask_checker.py
biocell/src/bsmu/biocell/app/configs/: BiocellApp.conf.yaml
biocell/src/bsmu/biocell/plugins/: dnn_tissue_segmenter.py  gui_dnn_tissue_segmenter.py  gui_tissue_segmenter.py  hed_wsi_smart_brush.py  kidney_tissue_segmenter.py  main_window.py  pc_dir_gui_segmenter.py  pc_gleason_segmenter.py  pc_gui_segmenter.py  pc_isup_predictor.py  pc_segmenter.py  renal_tubule_analyzer.py
biocell/src/bsmu/biocell/plugins/configs/: BiocellMainWindowPlugin.conf.yaml  BiocellPcGleasonSegmenterPlugin.conf.yaml  BiocellPcIsupPredictorPlugin.conf.yaml  DnnTissueSegmenterPlugin.conf.yaml  GuiTissueSegmenterPlugin.conf.yaml  PcSegmenterPlugin.conf.yaml
biocell/src/bsmu/biocell/plugins/images/: icons.qrc  icons_rc.py
bone-age/: README.md  build.py  setup.cfg
bone-age/bsmu/bone_age/app/: __main__.py  main.py
bone-age/bsmu/bone_age/app/configs/: BoneAgeApp.conf.yaml
bone-age/bsmu/bone_age/plugins/: journal_exporter.py  max_height_analyzer.py  table_visualizer.py
bone-age/docs/: max-height.xlsx  skeletal-development-rate.xlsx
bone-age/src/bsmu/bone_age/app/: __init__.py  main.py
bone-age/src/bsmu/bone_age/app/configs/: BoneAgeApp.conf.yaml
bone-age/src/bsmu/bone_age/plugins/: atlas_visualizer.py  image_loader.py  journal_exporter.py  main_window.py  predictor.py  skeletal_development_rate_analyzer.py  table_visualizer.py
bone-age/src/bsmu/bone_age/plugins/greulich-pyle-atlas/man/: autogen-index.yaml
experiments/: image_viewer_region_anchoring.py
retinal-fundus/: README.md  build.py  setup.cfg
retinal-fundus/bsmu/retinal_fundus/app/: __main__.py  main.py
retinal-fundus/bsmu/retinal_fundus/plugins/: table_visualizer.py
scripts/: build.py
src/bsmu/vision/: __init__.py  version.py
src/bsmu/vision/actors/: __init__.py  actor.py
src/bsmu/vision/app/: __init__.py  app.py  base.py  builder.py  builder_helper.py  dialogs.py  logger.py  main.py  plugin_manager.py  run-debug.bat
src/bsmu/vision/core/: abc.py  bbox.py  color_mapper.py  concurrent.py  data.py  data_file.py  freeze.py  handle_registry.py  palette.py  path.py  rle.py  selection.py  settings.py  visibility.py
src/bsmu/vision/dnn/: config.py  inferencer.py  predictor.py  segmenter.py
src/bsmu/vision/plugins/: color_contrast.py  file_dropper.py  layer_controller.py  layers_view.py  settings.py  task_storage_view.py  undo.py
src/bsmu/vision/undo/: __init__.py  layer.py  undo.py
src/bsmu/vision/widgets/: combo_slider.py  cursors.py  gender.py  layer_visibility.py  settings.py  visibility_v2.py
vision/: README.md  build.py  setup.py
vision-app/: README.md  build.py  setup.cfg  setup.py
vision-app/bsmu/vision/app/: App.conf.yaml  __main__.py  app.py  base.py  builder.py  config_uniter.py  main.py  plugin_manager.py  version.py
vision-core/: setup.cfg  setup.py
vision-core/bsmu/vision/core/: constants.py  data_file.py  dicom.py  palette.py
vision-core/bsmu/vision_core/: color_mapper.py  colormap.py  constants.py  data.py  date.py  dicom.py  image.py  palette.py
vision-core/bsmu/vision_core/converters/: color.py  image.py
vision-core/bsmu/vision_core/image/: base.py  layered.py
vision-core/bsmu/vision_core/transfer_functions/: color.py
vision-core/tests/converters/: test_color.py
vision-data-visualization-manager/bsmu/: vision_data_visualization_manager.py
vision-data-visualizer-registry/bsmu/: vision_data_visualizer_registry.py
vision-data-visualizer/bsmu/: vision_data_visualizer.py
vision-dnn/: setup.cfg  setup.py
vision-dnn/bsmu/vision/dnn/: segmenter.py
vision-dnn/bsmu/vision_dnn/: segmenter.py
vision-file-dropper/bsmu/: vision_file_dropper.py
vision-file-loading-manager/bsmu/: vision_file_loading_manager.py
vision-image-file-loader/bsmu/: vision_image_file_loader.py
vision-main-window/bsmu/: vision_main_window.py
vision-mdi/bsmu/: vision_mdi.py
vision-plugins/: setup.cfg  setup.py  setup_plugins.py
vision-plugins/bsmu/vision/plugins/: color_contrast.py  (+2 more)
vision-simple-image-file-loader/bsmu/: vision_simple_image_file_loader.py
vision-widgets/: setup.cfg  setup.py
vision/bsmu/vision/: __main__.py  app.py  main.py  plugin.py  plugin_manager.py  setup_info.py
(+425 files in other folders)
