[metadata]
name = bsmu.vision
version = attr: bsmu.vision.app.__version__
author = Ivan Kosik
author_email = ivankosik91@gmail.com
description = Base application for extension by plugins
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IvanKosik/vision
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 1 - Planning
    Topic :: Software Development :: Version Control :: Git

[options]
include_package_data = True
package_dir =
    = src
packages = find_namespace:
install_requires =
    bsmu.vision.core
    PySide6

[options.package_data]
* = *.conf.yaml

[options.entry_points]
console_scripts =
    bsmu-vision = bsmu.vision.app.main:run_app

[options.packages.find]
where = src
