[metadata]
name = bsmu.biocell
version = attr: bsmu.biocell.app.__version__
author = Ivan Kosik
author_email = ivankosik91@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Version Control :: Git

[options]
include_package_data = True
package_dir =
    = src
packages = find_namespace:
install_requires =
    bsmu.vision
    bsmu.vision.dnn
    bsmu.vision.plugins
    bsmu.vision.widgets
    numpy

[options.package_data]
* = *.conf.yaml

[options.entry_points]
console_scripts =
    bsmu-biocell = bsmu.biocell.app.main:run_app

[options.packages.find]
where = src
